<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/primaryLightColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backgroumd_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textMyNotes"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/layoutQuickAction"
        android:background="#282828"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageAddNote"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/app_name"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageAddImage"
            android:src="@drawable/ic_image"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageAddWebLink"
            android:src="@drawable/ic_wb_link"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            app:tint="@color/white" />

    </LinearLayout>

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:id="@+id/imageAddNoteMain"
        android:layout_marginEnd="32dp"
        android:background="@drawable/backfround_add_button"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction"
        android:src="@drawable/add"
        app:tint="@color/black"
        android:padding="4dp"
        android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>